Everything necessary for hit and miss sound effects and credit to website

--- a/battleship-master/index.html
+++ b/battleship-master/index.html
@@ -125,7 +125,7 @@
 		
 		<footer>
 			<span id="authors">
-				Authors: Deepak Kumar, Drake Prebyl, James Kraijcek, Rafael Alaras, Rodridgo Figueroa Justiniano.
+				Authors: Deepak Kumar, Drake Prebyl, James Kraijcek, Rafael Alaras, Rodridgo Figueroa Justiniano. Sound effects from Sound effects from zapsplat.com. 
 			</span>
 			<span id="links">
 				<a href="https://github.com/eecs448-locked-in-coders/battleship">GitHub Repository</a>
