Making start button clearer

--- a/battleship-master/index.html
+++ b/battleship-master/index.html
@@ -24,7 +24,7 @@
 				<input type="range" min="1" max="5" value="5" id="ship-slider">
 				<span id="num-ships">5</span>
 			</p>
-			<input type="button" id="complete" value="Start" onclick="onclick_human()" >
+			<input type="button" id="complete" value="Start PVP" onclick="onclick_human()" >
 			<input type="button" id="complete_AI1" value="StartAI1" onclick="onclick_AI1()">
 			<input type="button" id="complete_AI2" value="StartAI2" onclick="onclick_AI2()">
 			<input type="button" id="complete_AI2" value="StartAI3" onclick="onclick_AI3()">
