Updated authors, repo link

--- a/battleship-master/index.html
+++ b/battleship-master/index.html
@@ -125,10 +125,10 @@
 		
 		<footer>
 			<span id="authors">
-				Authors: Deepak Kumar, Drake Prebyl, James Kraijcek, Rafael Alaras, Rodridgo Figueroa Justiniano. Sound effects from Sound effects from zapsplat.com. 
+				Authors: Deepak Kumar, Drake Prebyl, James Kraijcek, Rafael Alaras, Rodridgo Figueroa Justiniano. New authors: Team 12. Sound effects from Sound effects from zapsplat.com. 
 			</span>
 			<span id="links">
-				<a href="https://github.com/eecs448-locked-in-coders/battleship">GitHub Repository</a>
+				<a href="https://github.com/kiranbisarya/EECS448_team12_project2">GitHub Repository</a>
 				&nbsp;
 				<a href="documentation/index.html">Documentation</a></p1>
 			</span>
