--- a/battleship-master/documentation/index.html
+++ b/battleship-master/documentation/index.html
@@ -47,8 +47,8 @@
 <p>A player-versus-player hotseat Battleship game written in <a href="http://vanilla-js.com/">Vanilla JS</a>.</p>
 <h2>Links</h2>
 <ul>
-<li><a href="https://eecs448-locked-in-coders.github.io/battleship/index.html">Click here to play</a></li>
-<li><a href="https://eecs448-locked-in-coders.github.io/battleship/documentation/index.html">View the documentation</a></li>
+<li><a href="https://kiranbisarya.github.io/EECS448_team12_project2/battleship-master/index.html">Click here to play</a></li>
+<li><a href="https://kiranbisarya.github.io/EECS448_team12_project2/battleship-master/documentation/index.html">View the documentation</a></li>
 </ul>
 <h2>Works cited</h2>
 <ul>
